2008-05-26	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/client.h:
	* ima/src/classroom_manager.h:
	* ima/src/cmd_input_dialog.h:
	* ima/src/client.cpp:
	* ima/src/dialogs.h:
	* ima/src/classroom_manager.cpp:
	- added classes clientAction and clientMenu
	- improved multiselection of clients and implemented
	  execution of client actions on all selected items
	- re-structured contextMenuRequest() of classmanager

	* ima/src/classroom_manager.h:
	* ima/src/classroom_manager.cpp:
	- moved initialization of menus to setupMenus()
	- simplified changeMode()
	- removed m_domTree
	- fixed show/hide menu action

2008-05-24	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/remote_control_widget.cpp:
	reverted hotfix from 2008-05-20

	* lib/src/vncview.cpp:
	Qt::WA_PaintOnScreen-property seems to have changed in Qt >= 4.4.0 so
	that widgets with this property set can't have overlapping
	sibling-widgets - so do not use this property anymore which fixes
	with toolbar in remote-control view

	* acinclude.m4:
	when cross-compiling, use non-native Qt-development-tools (moc, uic)

2008-05-21	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/main_window.cpp:
	fixed mode-buttons in toolbar which were broken in 1.0.9-rc1

2008-05-20	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/resources/sk.qm:
	* ica/resources/sk.ts:
	* setup/resources/sk.ts:
	* setup/resources/sk.qm:
	* ima/resources/sk.ts:
	* ima/resources/sk.qm:
	* lib/resources/sk.ts:
	* lib/resources/sk.qm:
	updated Slovakian localization-files by Jan Valuska
	<jvaluska/at/gymzv8rocne/dot/edu/dot/sk>

	* ima/src/remote_control_widget.cpp:
	hotfix for Qt >= 4.4.0 where toolbar didn't appear anymore

	* ima/src/client.cpp:
	fixed tray-menu-actions when main-window is minimized

	* lib/src/isd_connection.cpp:
	increased timeout again

2008-05-09	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/ru.qm:
	* ica/resources/ru.ts: